--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@babel/polyfill": "^7.11.5",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "chart.js": "^2.7.1",
     "core-js": "^3.6.5",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-chartjs": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
