--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^10.0.0",
     "vite": "^2.8.0",
     "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-pwa": "^0.11.13",
     "vue-cli-plugin-vuetify": "~2.4.7",
     "vuetify-loader": "^2.0.0-alpha.0"
   }
