--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
           node-version: '17.0.0'
       - name: Install and Build
         run: |
-          npm install
-          npm run build-linux
+          yarn
+          yarn build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
